Fixed spacing back

--- a/shot/schedule.css
+++ b/shot/schedule.css
@@ -60,7 +60,7 @@ h5 {
     color:white;
     padding-bottom: 2px;
     font-weight: normal;
-    font-size: 32px;
+    font-size: clamp(25px, 0.45vw, 32px);
     z-index: 200;
     text-align: center;
     margin-left: 10px;
@@ -166,6 +166,7 @@ a:hover {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                  Roboto, Helvetica, Arial, sans-serif;
     padding: 75px 14px 0;
+    line-height: 1.6;
 }
 
 .stack {
